* Add max score reporting to LMS for SCORM Quiz
* Fix image gallery to allow captions containing apostrophes
* Fix field IDs so that adding to a previously saved elp is consistent
* Fix Common Cartridge manifest when a header image is used
* Re-enable loading of user extended iDevices from config directory
* Translation updates

Version 1.04 (r3532) 2008-05-09
* Add offline snapshot of manual, release notes, and tutorial to Help menu
* Add undo button to discard changes after editing
* Add automatic auto_top anchors to facilitate internal linking to each node
* Add ability to translate tooltips
* Fix handling of multi-select questions with 10 or more options
* Fix tip display at right edge of windows
* Fix Common Cartridge resource references
* Fix package property display with Firefox 3.0 (no properties translations)
* Improve Common Cartridge metadata formation
* Improve Wiki Article iDevice handling of pages without content div
* Improve Firefox version detection for 3.0b series (Linux)
* Remove CSS letter-spacing to improve rendering with some fonts (Khmer)
* Prototype ability to load eXe-authored Common Cartridges
* Automate building Debian changelog and versioning
* Update to BeautifulSoup 3.0.6 (character coding detection issues)
* Translation updates and additions

Version 1.03 (r3373) 2008-01-21
* Add linking across pages within a package (only for web export)
* Add note that SCORM export previous/next requires non-standard extension
* Add prototype IMS Common Cartridge export (no quizzing)
* Add Rel-License microformat to license urls in exported content
* Make importing old packages more robust (and remove unused resources)
* Fix merging packages that contain resources with same name as main package
* Fix upgrading of multichoice questions
* Fix escaping of ampersands in rich text fields, allowing HTML embedding
* Fix embedding of images and media with '#' in name
* Fix SCORM Quiz pass rate to signal pass for scores of exactly the rate